--- a/Portfolio-Website/assets/css/style.css
+++ b/Portfolio-Website/assets/css/style.css
@@ -472,50 +472,54 @@ main {
     margin-top: var(--gutter-row-5);
     border-top: 1px solid var(--gray-400);
     padding-top: var(--gutter-row-5);
+
+    display: flex;
+    flex-direction: column;
+    row-gap: var(--gutter-row-3);
 }
 
-.testimonials-1 {
+.testimonials-1, .testimonials-2 {
     display: flex;
     flex-direction: column;
     row-gap: var(--gutter-row-1);
-    padding-bottom: var(--gutter-row-3);
-}
-
-.quote {
-    display: flex;
-    flex-direction: row;
-    column-gap: var(--gutter-col-1);
     justify-content: center;
     align-items: center;
     text-align: center;
 }
 
-.quote-1, .quote-3 {
+.quote-1 img {
+    width: var(--image-col-2);
+    height: var(--image-col-2); 
+}
+
+.quote-2 { 
+    width: var(--breakpoint-six);
+
+    display: flex;
+    flex-direction: row;
+    column-gap: var(--gutter-col-padding);
+    align-items: center;
+}
+
+.quote-2 img {
     min-width: var(--gutter-col-1);
     min-height: var(--gutter-col-1);
     max-width: var(--gutter-col-3);
     max-height: var(--gutter-col-3);
 }
 
-.quote-1:hover, .quote-3:hover { background-color: var(--green-400); }
+.quote-2 img:hover { background-color: var(--green-400); }
 
-.quote-2 { width: var(--breakpoint-six); }
-
-.quote-2 img {
-    width: var(--image-col-2);
-    height: var(--image-col-2);
-    justify-self: center;
-}
-
-.quote-2 blockquote { 
-    margin: var(--gutter-row-2) 0;
+.quote-2 blockquote {
+    margin: var(--gutter-row-1) 0 var(--gutter-row-padding) 0; 
     border-left: var(--gutter-row-padding) solid var(--green-400);
     padding: var(--gutter-row-1);
 }
 
-.quote-2 h6 { padding-bottom: var(--gutter-row-padding); }
-
-.quote-2 p { font-style: italic; }
+.quote-3 p { 
+    padding-top: var(--gutter-row-1);
+    font-style: italic; 
+}
 
 /* ==================== FOOTER ==================== */
 
